--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,35 @@
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 300;
+  src: url('../fonts/poppins-v24-latin-300.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/poppins-v24-latin-regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../fonts/poppins-v24-latin-600.woff2') format('woff2');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 900;
+  src: url('../fonts/poppins-v24-latin-900.woff2') format('woff2');
+}
+
 :root {
     --color-brand-light: #819B57;
     --color-brand-dark: #465929;
@@ -7,6 +39,10 @@
 
 body {
     color: var(--color-primary-dark);
+    font-family: Poppins, sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
 }
 
 ul {
@@ -15,6 +51,7 @@ ul {
 
 .button {
   color: var(--color-primary-light);
+  font-weight: 600;
   background-color: var(--color-brand-light);
   border: 2px solid var(--color-brand-light);
   border-radius: 8px;
@@ -38,30 +75,90 @@ ul {
 
 .link {
   color: var(--color-primary-light);
+  font-weight: 400;
   text-decoration: none;
 }
 
 .link:hover {
     color: var(--color-brand-light);
+    font-weight: 600;
 }
 
 .hero-title {
     color: var(--color-primary-light);
+    font-weight: 900;
+    font-size: 128px;
+    text-shadow: 2px 2px 4px violet;
+    text-align: center;
 }
 
 .hero-title .accent {
     color: var( --color-brand-light);
 }
 
-.decorative-list{
+.advantages-list{
     color: var(--color-primary-light);
     background-color: var(--color-brand-light);
+}
+
+.advantages-item{
+    font-weight: 300;
+    font-size: 20px;
 }
 
 /* .section-title {
     color: var(--color-primary-dark);
 } */
 
+.section-title{
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 1.3;
+}
+
 .section-title .accent{
     color: var(--color-brand-dark);
+}
+
+.traditions-text .brand{
+    color: var(--color-brand-light);
+    font-weight: 600;
+}
+
+.traditions-text .uppercase{
+    color: var(--color-brand-light);
+    text-transform: uppercase;
+}
+
+.chef-title{
+    font-weight: 600;
+    font-size: 40px;
+}
+
+.format-title{
+    font-weight: 600;
+    font-size: 24px;
+}
+
+.format-text{
+    font-size: 14px;
+    font-weight: 300;
+}
+
+address{
+    font-style: normal;
+}
+
+.address-link{
+    color: var(--color-primary-light);
+    font-size: 16px;
+    font-weight: 300;
+}
+
+.address-link:hover{
+    color: var(--color-brand-light);
+}
+
+.address-copyright{
+    font-size: 14px;
 }
